--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/enter-comment-content/enter-comment-content.scss
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/enter-comment-content/enter-comment-content.scss
@@ -126,3 +126,14 @@ $hover-color: #f2f2f2;
   font-weight: 500;
   color: red;
 }
+
+.comment-zone {
+  position: relative;
+}
+
+.tag-comment-show {
+  position: absolute;
+  left: 50%;
+  margin-left: -134px;
+  bottom: 55px;
+}
