--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-chinhsua-jeehr-dialog/account-management-chinhsua-jeehr-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-chinhsua-jeehr-dialog/account-management-chinhsua-jeehr-dialog.component.html
@@ -10,7 +10,7 @@
 <div class="modal-content">
   <div class="modal-header">
     <div class="modal-title h4" id="example-modal-sizes-title-lg">
-      <span class="dialog-title">{{ 'ACCOUNTMANAGEMENT.THEMMOITAIKHOAN' | translate }}</span>
+      <span class="dialog-title">{{ 'ACCOUNTMANAGEMENT.CHINHSUATAIKHOAN' | translate }}</span>
     </div>
   </div>
   <div class="overlay overlay-block cursor-default modal-body overflow-auto">
